--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.884.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "path": "^0.12.7"
   }
 }
