--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.884.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
