--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "axios-hooks": "^2.6.1",
+    "chart.js": "^3.2.1",
     "date-fns": "^2.0.0-beta.5",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-material-ui-form-validator": "^2.1.4",
